--- a/CSS/materias.css
+++ b/CSS/materias.css
@@ -45,9 +45,11 @@ li,
 strong {
     font-family: var(--fontTexto);
 }
-body p{
+
+body p {
     text-align: justify;
 }
+
 body h1,
 h2,
 h3,
@@ -156,15 +158,17 @@ header #imgG img {
     margin: 20px 10px;
     font-size: 1.2rem;
 }
+
 #TextoMateria article p,
-#TextoMateria article li{
+#TextoMateria article li {
     margin: 15px;
 }
 
 #TextoMateria article ul,
-#TextoMateria article ol{
+#TextoMateria article ol {
     margin: 20px;
 }
+
 #Materias {
     width: 90%;
     min-width: 320px;
@@ -193,12 +197,14 @@ header #imgG img {
     justify-content: space-between;
     align-items: center;
 }
-#Materias article aside{
+
+#Materias article aside {
     width: 100%;
     max-width: 450px;
     height: 200px;
     display: block;
-}    
+}
+
 #Materias a {
     width: 100%;
     max-width: 450px;
@@ -213,6 +219,7 @@ header #imgG img {
     color: #000000;
     text-decoration: none;
 }
+
 #Materias a:hover {
     box-shadow: 5px 5px 15px #0000004a;
 }
@@ -283,7 +290,7 @@ header #imgG img {
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin: 10px 0px;
+    margin: 50px 0px 0px 0px;
 }
 
 #Newsletter h1,
@@ -291,26 +298,49 @@ p {
     margin: 5px;
 }
 
-#Newsletter span {
-    font-size: 1.75rem;
-}
-
-#Newsletter form {
+#formN, form{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#Newsletter form input {
+#Newsletter span {
+    font-size: 1.75rem;
+}
+
+
+#Newsletter input {
     width: 80%;
     height: 40px;
     margin: 10px;
     padding: 5px;
     border: 1px solid #94d8ff;
     border-radius: 5px;
+}
+
+#Newsletter input[type=submit] {
+    border: none;
+    color: #ffffff;
+    width: auto;
+    display: inline-block;
+    text-decoration: none;
+    font-size: 1.3em;
+    margin: 8px 15px;
+    padding-bottom: 5px;
+    background: linear-gradient(#ffffff 0%, #ffffff 98%);
+    background-size: 0px 2px;
+    background-repeat: no-repeat;
+    background-position: left 90%;
+}
+
+#Newsletter input[type=submit]:hover {
+    color: #000000;
+    transition: 0.3s;
+    background-size: 100% 2px;
+    text-shadow: 2px 3px 10px #4480c5dd;
 }
 
 footer {
