--- a/CSS/Resposividade/MateriaR.css
+++ b/CSS/Resposividade/MateriaR.css
@@ -10,6 +10,7 @@
         display: block;
         transition: all 0.3s ease;
         z-index: 1;
+        height: 100%;
     }
 
     nav ul.open {
@@ -58,10 +59,12 @@
         display: flex;
         flex-direction: row;
     }
-    #TextoMateria article{
-        width: 70%; 
+
+    #TextoMateria article {
+        width: 70%;
     }
-    #TextoMateria aside{
+
+    #TextoMateria aside {
         height: 100%;
         width: 30%;
         background-color: aliceblue;
@@ -100,19 +103,36 @@
     #Newsletter {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
 
-    #Newsletter div {
-        width: 40%;
+    #Newsletter h1,
+    p {
+        text-align: start;
     }
 
-    #Newsletter form {
+    #Newsletter article {
         width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: start;
+        padding: 10px;
+        max-width: 500px;
     }
 
-    #Newsletter form input {
+    #Newsletter #formN {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 10px;
+        max-width: 500px;
+    }
+
+    #Newsletter input {
         width: 300px;
         height: 40px;
         margin: 10px;
@@ -152,10 +172,12 @@
         margin: 20px 0;
         max-width: 1000px;
     }
-    #TextoMateria article{
-        width: 70%; 
+
+    #TextoMateria article {
+        width: 70%;
     }
-    #TextoMateria aside{
+
+    #TextoMateria aside {
         height: 100%;
         width: 30%;
         background-color: aliceblue;
