--- a/CSS/Resposividade/Responsividade.css
+++ b/CSS/Resposividade/Responsividade.css
@@ -10,6 +10,7 @@
         display: block;
         transition: all 0.3s ease;
         z-index: 1;
+        height: 100%;
     }
 
     nav ul.open {
@@ -41,7 +42,7 @@
     }
 
     header {
-        height: 500px;
+        height: 250px;
         padding: 15px 15px 15px 30px;
     }
 
@@ -61,8 +62,8 @@
         width: 45%;
         display: block;
     }
-    
-    #QuemSomosP div figure img{
+
+    #QuemSomosP div figure img {
         width: 100%;
     }
 
@@ -84,7 +85,7 @@
         display: block;
     }
 
-    #ServicosP div figure img{
+    #ServicosP div figure img {
         width: 100%;
     }
 
@@ -95,7 +96,7 @@
     #Newsletter {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
 
@@ -104,15 +105,27 @@
         text-align: start;
     }
 
-    #Newsletter div {
-        width: 40%;
-    }
-
-    #Newsletter form {
+    #Newsletter article {
         width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: start;
+        padding: 10px;
+        max-width: 500px;
     }
 
-    #Newsletter form input {
+    #Newsletter #formN {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+        max-width: 500px;
+    }
+
+    #Newsletter input {
         width: 300px;
         height: 40px;
         margin: 10px;
@@ -141,7 +154,7 @@
     }
 
     body header {
-        height: 500px;
+        height: 350px;
         padding: 15px 15px 15px 30px;
     }
 
@@ -152,16 +165,19 @@
     #QuemSomosP {
         width: 90%;
         padding: 10px;
+        max-width: 1000px;
     }
 
     #PropostaP {
         width: 90%;
         padding: 10px;
+        max-width: 1000px;
     }
 
     #ServicosP {
         width: 90%;
         padding: 10px;
+        max-width: 1000px;
     }
 
     #Newsletter {
