--- a/CSS/Resposividade/quemSomosR.css
+++ b/CSS/Resposividade/quemSomosR.css
@@ -10,6 +10,7 @@
         display: block;
         transition: all 0.3s ease;
         z-index: 1;
+        height: 100%;
     }
 
     nav ul.open {
@@ -61,7 +62,7 @@
     #Newsletter {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
 
@@ -70,15 +71,27 @@
         text-align: start;
     }
 
-    #Newsletter div {
-        width: 40%;
-    }
-
-    #Newsletter form {
+    #Newsletter article {
         width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: start;
+        padding: 10px;
+        max-width: 500px;
     }
 
-    #Newsletter form input {
+    #Newsletter #formN {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 10px;
+        max-width: 500px;
+    }
+
+    #Newsletter input {
         width: 300px;
         height: 40px;
         margin: 10px;
