--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -336,7 +336,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     padding: 10px;
 }
