--- a/CSS/Resposividade/BlogR.css
+++ b/CSS/Resposividade/BlogR.css
@@ -66,12 +66,12 @@
     #areaMaterias{
         display: grid;
         grid-template-columns: 50% 50%;
-        height: auto;
-        grid-gap: 15px;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        height: 100%;
     }
     #areaMaterias a {
         width: 100%;
-        height: 100%;
+        height: 350px;
         margin: 10px;
     }
     #areaMaterias #filtroM {
