--- a/CSS/quemSomos.css
+++ b/CSS/quemSomos.css
@@ -155,7 +155,7 @@ main {
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
