--- a/CSS/materias.css
+++ b/CSS/materias.css
@@ -309,7 +309,8 @@ p {
     margin: 5px;
 }
 
-#formN, form{
+#formN,
+form {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -387,7 +388,8 @@ footer #Empresa img {
     width: 250px;
 }
 
-footer #map {
+footer #map,
+footer #map iframe {
     height: 200px;
     width: 100%;
     padding: 5px;
