--- a/CSS/padrão.css
+++ b/CSS/padrão.css
@@ -237,7 +237,8 @@ footer #Empresa img {
     width: 250px;
 }
 
-footer #map {
+footer #map,
+footer #map iframe {
     height: 200px;
     width: 100%;
     padding: 5px;
