--- a/CSS/quemSomos.css
+++ b/CSS/quemSomos.css
@@ -283,7 +283,8 @@ footer #Empresa img {
     width: 250px;
 }
 
-footer #map {
+footer #map,
+footer #map iframe {
     height: 200px;
     width: 100%;
     padding: 5px;
